# git-fiuba

./: .gitignore  Cargo.toml  README.md  clippy.sh  git_interface.glade  git_repository.rs  test.sh  test_http.sh
git/: Cargo.toml  clippy-watcher.sh  clippy.toml  test-watcher.sh
git/server-test/: start-daemon.sh
git/src/: command.rs  error_args.rs  lib.rs  logger.rs  main.rs
git/src/commands/: add.rs  branch.rs  branch_manager.rs  cat_file.rs  check_ignore.rs  checkout.rs  clone.rs  command.rs  command_errors.rs  commit.rs  config.rs  database.rs  deflate_tree.rs  error_flags.rs  fetch.rs  file_compressor.rs  h.py  hash_object.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  mod.rs  objects_database.rs  pull.rs  push.rs  reader.rs  rebase.rs  remote.rs  rm.rs  show_ref.rs  stagin_area.rs  staging_area.rs  status.rs  tag.rs
git/src/hash_object/: mod.rs
git/src/index/: change.rs  mod.rs  mode.rs  staging_area.rs
git/tests/: add_integration_test.rs  branch_integration.rs  cat_file_integration.rs  check_ignore_integration.rs  checkout_integration.rs  checkout_tag_integration.rs  clone_integration.rs  commit_integration.rs  delta_objects_over_network_client.rs  hash_object_integration.rs  init_integration.rs  log_integration.rs  log_integration_test.rs  ls_files_integration.rs  ls_tree_integration.rs  merge_integration.rs  merge_tag_integration.rs  pull_integration.rs  push_integration.rs  rebase_integreation.rs  rm_integration_test.rs  show_ref_integration.rs  status_integration.rs  tag_integration.rs
git/tests/common/: aux.rs
git/tests/data/mode/: link
(+154 files in other folders)
