[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
libflate = "2"
chrono = "0.4.31"
hex = "0.4.3"
flate2 = "1.0.20"
git-lib = { path = "../git-lib" }

[[bin]]
name = "git"
path = "src/main.rs"

[[bin]]
name = "deflate_tree"
path = "src/commands/deflate_tree.rs"
